stub for config post

--- a/server/views/config.html
+++ b/server/views/config.html
@@ -1,1 +1,11 @@
-config
+<h1>Sasha Config</h1>
+
+<form action="/config" method="POST">
+    Mopidy Host:<br>
+    <input type="text" name="mopidy_host"><br>
+    Watson Username:<br>
+    <input type="text" name="watson_username"><br>
+    Watson Password:<br>
+    <input type="text" name="watson_password"><br><br>
+    <input type="submit" value="Submit">
+</form>
