--- a/server/views/config.html
+++ b/server/views/config.html
@@ -2,10 +2,10 @@
 
 <form action="/config" method="POST">
     Mopidy Host:<br>
-    <input type="text" name="mopidy_host"><br>
+    <input type="text" name="mopidy_host" placeholder="{{mopidy_host}}"><br>
     Watson Username:<br>
-    <input type="text" name="watson_username"><br>
+    <input type="text" name="watson_username" placeholder="{{watson_username}}"><br>
     Watson Password:<br>
-    <input type="text" name="watson_password"><br><br>
+    <input type="text" name="watson_password" placeholder="{{watson_password}}"><br><br>
     <input type="submit" value="Submit">
 </form>
