--- a/server/views/layouts/layout.html
+++ b/server/views/layouts/layout.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <title>Sasha Brain</title>
+        <title>Sasha</title>
 
         <!-- Vendor -->
         {{!-- <script type="text/javascript" src="/public/vendor/js/jquery-3.1.1.min.js"></script>
