--- a/server/views/index.html
+++ b/server/views/index.html
@@ -1,2 +1,7 @@
 <h1>Sasha</h1>
->
+
+<ul>
+    <li><a href="/config">Config</a></li>
+    <li><a href="/logs">Logs</a></li>
+    <li><a href="/speak">Speak (not working)</a></li>
+</ul>
