--- a/server/views/speak.html
+++ b/server/views/speak.html
@@ -1,3 +1,5 @@
+<a href="/">< home</a>
+
 <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <style>
   button{
