--- a/server/views/logs.html
+++ b/server/views/logs.html
@@ -1,2 +1,4 @@
 <a href="/">< home</a>
 <a href="/logs">refresh</a>
+
+<p><iframe src="/public/assets/node_log.txt" frameborder="0" height="400" width="95%"></iframe></p>
