auto scroll to bottom

--- a/server/views/layouts/layout.html
+++ b/server/views/layouts/layout.html
@@ -4,13 +4,13 @@
         <title>Sasha</title>
 
         <!-- Vendor -->
-        {{!-- <script type="text/javascript" src="/public/vendor/js/jquery-3.1.1.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="/public/vendor/css/bootstrap-3.3.7.min.css">
-        <script type="text/javascript" src="/public/vendor/js/bootstrap-3.3.7.min.js"></script> --}}
+        <script type="text/javascript" src="/public/vendor/js/jquery-3.2.0.min.js"></script>
+        <!-- <link rel="stylesheet" type="text/css" href="/public/vendor/css/bootstrap-3.3.7.min.css">
+        <script type="text/javascript" src="/public/vendor/js/bootstrap-3.3.7.min.js"></script> -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Tangerine" rel="stylesheet">
 
         <!-- Local -->
-        {{!-- <link rel="stylesheet" type="text/css" href="/public/css/base.css"> --}}
+        <!-- <link rel="stylesheet" type="text/css" href="/public/css/base.css"> -->
 
     </head>
     <body>
