--- a/server/views/index.html
+++ b/server/views/index.html
@@ -3,5 +3,6 @@
 <ul>
     <li><a href="/config">Config</a></li>
     <li><a href="/logs">Logs</a></li>
+    <li><a href="/text">Text</a></li>
     <li><a href="/speak">Speak (not working)</a></li>
 </ul>
