small bug cleanup

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -4,5 +4,5 @@
     <li><a href="/config">Config</a></li>
     <li><a href="/logs">Logs</a></li>
     <li><a href="/text">Text</a></li>
-    <li><a href="/speak">Speak (not working)</a></li>
+    <!-- <li><a href="/speak">Speak (not working)</a></li> -->
 </ul>
