--- a/server/views/logs.html
+++ b/server/views/logs.html
@@ -1,7 +1,7 @@
 <a href="/">< home</a><br>
 <a href="/logs">refresh</a>
 
-<p><iframe id="frame" src="file:///Users/benwiz/github/personal/sasha-dist/sasha-darwin-x64/sasha.app/Contents/Resources/app/public/assets/node_log.txt" frameborder="0" height="400" width="95%"></iframe></p>
+<p><iframe id="frame" src="../../public/assets/node_log.txt" frameborder="0" height="400" width="95%"></iframe></p>
 
 <script type="text/javascript">
     $(document).ready(function() {
