--- a/server/views/logs.html
+++ b/server/views/logs.html
@@ -1,7 +1,9 @@
 <a href="/">< home</a><br>
 <a href="/logs">refresh</a>
 
-<p><iframe id="frame" src="../../public/assets/node_log.txt" frameborder="0" height="400" width="95%"></iframe></p>
+<br>{{filepath}}
+
+<p><iframe id="frame" src="/public/assets/node_log.txt" frameborder="0" height="400" width="95%"></iframe></p>
 
 <script type="text/javascript">
     $(document).ready(function() {
