--- a/server/views/logs.html
+++ b/server/views/logs.html
@@ -3,7 +3,7 @@
 
 <br>{{filepath}}
 
-<p><iframe id="frame" src="/public/assets/node_log.txt" frameborder="0" height="400" width="95%"></iframe></p>
+<p><iframe id="frame" src="/node_log.txt" frameborder="0" height="400" width="95%"></iframe></p>
 
 <script type="text/javascript">
     $(document).ready(function() {
