--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,10 @@ my intention is to use a front-end framework like vue.js. But first I need
 to design it. This current implementation is supposed to be very minimal, not
 even using jQuery. -->
 
+<head>
+    <script src="/static/vendor/js/jquery-3.2.1.min.js"></script>
+</head>
+
 <h2>This is Sasha.</h2>
 <div>
     <input type="checkbox" id="salt-lamp" name="interest" value="salt-lamp">
@@ -59,7 +63,7 @@ even using jQuery. -->
                 state: items.salt_lamp.checked ? 'on' : 'off'
             }
         };
-        console.log(desired_state);
+        console.log($.ajax);
         // TODO: call setCurrentState using response
     }
 
