--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@ to design it. This current implementation is supposed to be very minimal, not
 even using jQuery. -->
 
 <head>
+    <!-- TODO: Collect Static and get in the Django way -->
     <script src="/static/vendor/js/jquery-3.2.1.min.js"></script>
 </head>
 
@@ -63,8 +64,25 @@ even using jQuery. -->
                 state: items.salt_lamp.checked ? 'on' : 'off'
             }
         };
-        console.log($.ajax);
-        // TODO: call setCurrentState using response
+
+        var payload = {
+            desired_state: desired_state
+        };
+
+        var data = JSON.stringify(desired_state);
+
+        $.ajax({
+            url: '/api/state/',
+            type: 'POST',
+            data: data,
+            success: function(res) {
+                console.log('success', res);
+                // TODO: call setCurrentState using response
+            },
+            error: function(err) {
+                console.log('updateDesiredState() error:', err);
+            }
+        });
     }
 
 </script>
