--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -69,7 +69,7 @@ even using jQuery. -->
             desired_state: desired_state
         };
 
-        var data = JSON.stringify(desired_state);
+        var data = JSON.stringify(payload);
 
         $.ajax({
             url: '/api/state/',
