--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,8 @@ my intention is to use a front-end framework like vue.js. But first I need
 to design it. This current implementation is supposed to be very minimal, not
 even using jQuery. -->
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 <head>
     <!-- TODO: Collect Static and get in the Django way -->
     <script src="/static/vendor/js/jquery-3.2.1.min.js"></script>
